update for publish

--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "vscode-example-test-adapter",
-  "displayName": "Example Test Explorer",
-  "description": "Run your Example tests in the Sidebar of Visual Studio Code",
+  "name": "vscode-acutest-test-adapter",
+  "displayName": "Acutest Test Explorer",
+  "description": "Run your Acutest tests in the Sidebar of Visual Studio Code",
   "icon": "img/icon.png",
-  "author": "Holger Benl <hbenl@evandor.de>",
-  "publisher": "hbenl",
+  "author": "James",
+  "publisher": "moosecasa",
   "version": "0.0.1",
   "license": "MIT",
-  "homepage": "https://github.com/hbenl/vscode-example-test-adapter",
+  "homepage": "https://github.com/moosecasa/vscode-acutest-test-adapter",
   "repository": {
     "type": "git",
-    "url": "https://github.com/hbenl/vscode-example-test-adapter.git"
+    "url": "https://github.com/moosecasa/vscode-acutest-test-adapter.git"
   },
   "bugs": {
-    "url": "https://github.com/hbenl/vscode-example-test-adapter/issues"
+    "url": "https://github.com/moosecasa/vscode-acutest-test-adapter/issues"
   },
   "categories": [
     "Other"
@@ -39,7 +39,7 @@
   "devDependencies": {
     "@types/vscode": "~1.23.0",
     "typescript": "^3.5.3",
-    "vsce": "^1.65.0"
+    "vsce": "^1.85.1"
   },
   "engines": {
     "vscode": "^1.23.0"
