fixing yaml issues

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -32,7 +32,7 @@ body:
         - Linux
         - Windows
         - Mac OS
-        - *BSD
+        - BSD
         - Other  
   - type: input
     id: version
