--- a/.github/ISSUE_TEMPLATE/feature_request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yaml
@@ -1,5 +1,5 @@
 name: Request a feature
-description: Request a feature
+description: Request a feature/provide feedback
 title: "[Enhancement]: "
 labels: [enhancement]
 assignees:
